feat : Add Swagger Response Documentation [#41]